--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,9 @@ click==8.1.3; python_version >= '3.7'
 constantly==15.1.0
 cryptography==37.0.2; python_version >= '3.6'
 flask==2.1.2
-gunicorn==20.1.0
+gevent==21.12.0
+greenlet==1.1.2; platform_python_implementation == 'CPython'
+gunicorn[gevent]==20.1.0
 hyperlink==21.0.0
 idna==3.3; python_version >= '3.5'
 importlib-metadata==4.11.3; python_version < '3.10'
@@ -32,4 +34,5 @@ txaio==22.2.1; python_version >= '3.6'
 typing-extensions==4.2.0; python_version >= '3.7'
 werkzeug==2.1.2; python_version >= '3.7'
 zipp==3.8.0; python_version >= '3.7'
+zope.event==4.5.0
 zope.interface==5.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
